--- a/src/main/resources/com/sysrec/projet_ds1_java/View/hello-view.fxml
+++ b/src/main/resources/com/sysrec/projet_ds1_java/View/hello-view.fxml
@@ -6,7 +6,7 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.sysrec.projet_ds1_java.HelloController">
+      fx:controller="com.sysrec.projet_ds1_java.Controller.HelloController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
@@ -14,3 +14,4 @@
   <Label fx:id="welcomeText"/>
   <Button text="Hello!" onAction="#onHelloButtonClick"/>
 </VBox>
+    
