--- a/src/main/resources/com/sysrec/projet_ds1_java/View/ResourceDetailView.fxml
+++ b/src/main/resources/com/sysrec/projet_ds1_java/View/ResourceDetailView.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.geometry.Insets?>
 
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 <VBox spacing="10" style="-fx-padding: 20;" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.sysrec.projet_ds1_java.Controller.ResourceDetailController">
 
@@ -10,31 +12,35 @@
 
     <GridPane hgap="10" vgap="8">
         <Label text="Title:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-        <Label fx:id="titleLabel" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+        <TextField fx:id="titleField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
 
         <Label text="Category:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-        <Label fx:id="categoryLabel" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+        <TextField fx:id="categoryField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
 
         <Label text="Difficulty:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-        <Label fx:id="difficultyLabel" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+        <TextField fx:id="difficultyField" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
 
-        <Label text="Teacher:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-        <Label fx:id="teacherLabel" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+        <Label text="Type:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+        <TextField fx:id="typeField" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
 
         <Label text="Description:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-        <Label fx:id="descriptionLabel" wrapText="true" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+        <TextArea fx:id="descriptionField" wrapText="true" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
 
-        <Label text="Keywords:" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
-        <Label fx:id="keywordsLabel" wrapText="true" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
 
-        <Label text="Created At:" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
-        <Label fx:id="createdAtLabel" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+        <Label text="Rating:" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
+        <Label fx:id="ratingLabel" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+        <Label text="total Savings :" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
+        <Label fx:id="studentCountLabel" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
 
-        <Label text="Rating:" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
-        <Label fx:id="ratingLabel" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+
+
     </GridPane>
 
-    <HBox alignment="center">
-        <Button text="Close" onAction="#handleClose"/>
+
+    <HBox spacing="10" alignment="CENTER_RIGHT" style="-fx-padding: 10 0 0 0;">
+        <Button text="Delete" onAction="#handleDelete" />
+        <Button text="Modify" onAction="#handleModify" />
     </HBox>
+
 </VBox>
+
